# multi_contact_point_estimator

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: default_plugin_sets.yaml  default_plugins.xml  plugin_descriptions.yaml  rviz_footstep_planning.rviz
include/multi_contact_point_estimator/uneven_terrain_stand/: README_QHULL.md  convex_hull_stand.h  data_points.h  foot_state_uneven.h  model_stand.h  q_hull_extended.h  stand_predict.h  terrain_model_uneven.h  uneven_terrain_stand.h
include/multi_contact_point_estimator/uneven_terrain_stand/foot/: foot_form.h  foot_state_uneven.h
include/multi_contact_point_estimator/uneven_terrain_stand/planner/: footstep_planner_node_uneven.h
include/multi_contact_point_estimator/uneven_terrain_stand/src/: README.txt
include/multi_contact_point_estimator/uneven_terrain_stand/src/libqhull/: geom.c  geom.h  geom2.c  global.c  io.c  io.h  libqhull.c  libqhull.h  mem.c  merge.c  merge.h  poly.c  poly.h  poly2.c  qhull_a.h  qset.c  random.c  random.h  rboxlib.c  stat.c  stat.h  user.c  usermem.c  userprintf.c  userprintf_rbox.c
include/multi_contact_point_estimator/uneven_terrain_stand/src/libqhull_r/: geom2_r.c  geom_r.c  geom_r.h  global_r.c  io_r.c  io_r.h  libqhull_r.c  libqhull_r.h  mem_r.c  merge_r.c  merge_r.h  poly2_r.c  poly_r.c  poly_r.h  qhull_ra.h  qset_r.c  random_r.c  random_r.h  rboxlib_r.c  stat_r.c  user_r.c  usermem_r.c
include/multi_contact_point_estimator/uneven_terrain_stand/src/libqhullcpp/: Coordinates.cpp  Coordinates.h  PointCoordinates.cpp  PointCoordinates.h  Qhull.cpp  Qhull.h  QhullError.h  QhullFacet.cpp  QhullFacet.h  QhullFacetList.cpp  QhullFacetList.h  QhullFacetSet.cpp  QhullFacetSet.h  QhullHyperplane.cpp  QhullHyperplane.h  QhullLinkedList.h  QhullPoint.cpp  QhullPoint.h  QhullPointSet.cpp  QhullPointSet.h  QhullPoints.cpp  QhullPoints.h  QhullQh.cpp  QhullRidge.cpp  QhullRidge.h  QhullSet.cpp  QhullSet.h  QhullSets.h  QhullStat.cpp  QhullVertex.cpp  QhullVertex.h  QhullVertexSet.cpp  QhullVertexSet.h  RboxPoints.cpp  RboxPoints.h  RoadError.cpp  RoadError.h  RoadLogEvent.cpp  qt-qhull.cpp
include/multi_contact_point_estimator/uneven_terrain_stand/src/qconvex/: qconvex_r.c
include/multi_contact_point_estimator/uneven_terrain_stand/src/qdelaunay/: qdelaun_r.c
include/multi_contact_point_estimator/uneven_terrain_stand/src/qhalf/: qhalf_r.c
include/multi_contact_point_estimator/uneven_terrain_stand/src/qhull/: unix_r.c
include/multi_contact_point_estimator/uneven_terrain_stand/src/qhulltest/: Coordinates_test.cpp  PointCoordinates_test.cpp  QhullFacetList_test.cpp  QhullFacetSet_test.cpp  QhullFacet_test.cpp  QhullHyperplane_test.cpp  QhullLinkedList_test.cpp  QhullPointSet_test.cpp  QhullPoint_test.cpp  QhullPoints_test.cpp  QhullRidge_test.cpp  QhullSet_test.cpp  QhullVertexSet_test.cpp  QhullVertex_test.cpp  Qhull_test.cpp  RboxPoints_test.cpp  RoadTest.cpp  qhulltest.cpp
include/multi_contact_point_estimator/uneven_terrain_stand/src/qvoronoi/: qvoronoi_r.c
include/multi_contact_point_estimator/uneven_terrain_stand/src/rbox/: rbox_r.c
include/multi_contact_point_estimator/uneven_terrain_stand/src/user_eg/: user_eg_r.c
include/multi_contact_point_estimator/uneven_terrain_stand/src/user_eg2/: user_eg2_r.c
include/multi_contact_point_estimator/uneven_terrain_stand/stand/: convex_hull_stand.h  model_stand.h  uneven_terrain_stand.h
include/multi_contact_point_estimator/uneven_terrain_stand/utilities/: q_hull_extended.h
include/multi_contact_point_estimator/uneven_terrain_stand/visualization/: footstep_planning_vis_node_uneven.h  visualization_non_cvx_foot.h
launch/: footstep_planner_test.launch  planner_multi_contact_points.launch
qhull/: README.md  libqhull_r.so.7.2.0
src/uneven_terrain_stand/: convex_hull_stand.cpp  data_points.cpp  foot_form.cpp  model_stand.cpp  q_hull_extended.cpp  stand_predict.cpp  terrain_model_uneven.cpp  uneven_terrain_stand.cpp
src/uneven_terrain_stand/foot/: foot_form.cpp
src/uneven_terrain_stand/planner/: footstep_planner_node_uneven.cpp
src/uneven_terrain_stand/stand/: convex_hull_stand.cpp  model_stand.cpp  uneven_terrain_stand.cpp
src/uneven_terrain_stand/utilities/: q_hull_extended.cpp
src/uneven_terrain_stand/visualization/: README  footstep_planning_vis_node_extract.cpp  footstep_planning_vis_node_uneven.cpp
tensorflow/: README.md
